[tool.poetry]
name = "comp100-2021f-ps0-brahmanova21"
version = "0.1.0"
description = ""
authors = ["BRAHMANOVA21 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy266165 = "^1.0.789"
pylab-sdk = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
